fixed bug with stretching page

--- a/src/scss/modules/_general.scss
+++ b/src/scss/modules/_general.scss
@@ -14,6 +14,9 @@ body, html {
 .m-50 {
   margin-top: 50px;
 }
+.slick-slider {
+  z-index: 300;
+}
 
 
 
